Changelog
=========

9.5-dev - (unreleased)
----------------------
* Feature: Added robots meta tag in <head> to disallow search
  engines to index "public draft" states (visible only with direct link).
  [demarant fixes #19091]
* Bug fix: Allow titles within PDF cover export longer than 65 chars (one line)
  [voineali refs #18953]
* Bugfix: Removed eea_vpip.js as it is obsolete and was in conflict with
  googlechart filters
  [szabozo0 refs #19174]
* Feature: Use high resolution SVG for daviz charts embed within PDF export
  instead of PNG
  [voineali refs #18910]
* Upgrade step: within "Plone > Site setup > Add-ons" click on upgrade button
  available for eea.design
  [olimpiurob refs #18641]
* Change: Removed tinymce plugins from this package. Moved to eea.tinymce
  package
  [olimpiurob refs #18641]
* Change: eea fullscreen plugin no longer uses the bundled fullscreen plugin
  which has many issues given the fact that it inserts a new editor when using
  it
  [ichimdav refs #19082]
* Bug fix: Key Facts class is now correctly applied on the parent ul tag
  [ichimdav refs #18785]
* Bug fix: Do not show old versions promo, only display the latest published
  version of promoted objects.
  [olimpiurob refs #18918]
* Feature: improved print css and pdf css. More discreet related items.
  removed floating on generic callout in pdf.
  [demarant refs #18639]
* Upgrade step: Cleanup portal_skins and portal_view_customizations
  marked with eea.design 9.5
  [voineali refs #18987]
* Feature: Update documentByLine look and feel
  [voineali refs #18987]
* Bug fix: Fixed Daviz chart image raw embed within PDF export
  [voineali refs #18910]
* Change: increased the size of the TinyMCE mceListBox
  [ichimdav refs #18785]
* Feature: documented not sortable table unde design elements
  [ghicaale refs #18942]

9.4 - (2014-03-20)
------------------
* Feature: Update document by line viewlet with more info about the authors and
  contributors
  [voineali refs #18987]
